--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "imagen-google-ai",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,10 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "@google/genai": "latest",
-    "@supabase/supabase-js": "^2.52.1"
+    "@google/genai": "1.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
