--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-kira-generate",
+  "name": "app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "1.0.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "@google/genai": "latest",
+    "@supabase/supabase-js": "^2.52.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
